fix: update module paths in inbox document
- corrects module path listing in inbox file
- ensures consistency with actual module structure
- improves documentation accuracy for users navigating modules

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -10,8 +10,8 @@ The modules for pantheon are spread around the following modules:
 - `packages/kanban `
 - `packages/frontends`
 - `packages/agents/*`
-- `packages/omni/*
-- `packages/duck*`
+- `packages/omni/*`
+- `packages/duck/*`
 - 
 
 
