--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -12,7 +12,8 @@ The modules for pantheon are spread around the following modules:
 - `packages/agents/*`
 - `packages/omni/*`
 - `packages/duck/*`
-- 
+- `packages/piper`
+- `packages/pipeline/*`
 
 
 ## Motivation
