--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -14,6 +14,8 @@ The modules for pantheon are spread around the following modules:
 - `packages/duck/*`
 - `packages/piper`
 - `packages/pipeline/*`
+- `packages/enso/*`
+- `packages/cephalon`
 
 
 ## Motivation
