--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -3,7 +3,7 @@
 We've got a lot of code all over the place, many designs.
 It starts to come together as something unique here.
 
-The modules for pantheon are spread around the following modules:
+The modules and  for pantheon are spread around the following modules:
 - `packages/ai/*`
 - `packages/opencode-client`
 - `packages/opencode-unified`
@@ -11,6 +11,7 @@ The modules for pantheon are spread around the following modules:
 - `packages/frontends`
 - `packages/agents/*`
 - `packages/omni/*`
+- `packages/mcp/*`
 - `packages/duck/*`
 - `packages/piper`
 - `packages/pipeline/*`
