fix: remove redundant module path in inbox documentation
- corrects module listing in docs/inbox/2025.10.20.11.02.33.md
- removes extra text to improve clarity and accuracy

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -11,7 +11,7 @@ The modules and  for pantheon are spread around the following modules:
 - `packages/frontends`
 - `packages/agents/*`
 - `packages/omni/*`
-- `packages/mcp/*`
+- `packages/mcp`
 - `packages/duck/*`
 - `packages/piper`
 - `packages/pipeline/*`
