add design document and plan for pantheon modules
- introduce structured design for pantheon module layout
- provide clear guidance for module implementation
- define next steps for development and integration

--- a/docs/inbox/2025.10.20.11.02.33.md
+++ b/docs/inbox/2025.10.20.11.02.33.md
@@ -18,6 +18,8 @@ The modules and  for pantheon are spread around the following modules:
 - `packages/enso/*`
 - `packages/cephalon`
 
+Help me turn this into a proper design document and plan.
+
 
 ## Motivation
 
