chore: add PM2 integration for indexer service management
- Support PM2 daemon mode via `--pm2` flag in start command
- Make status command PM2-aware with real-time metrics
- Implement proper stop command for PM2 daemon
- Add graceful fallback when PM2 is not installed
- Update CLI usage and examples for PM2 mode

--- a/changelog.d/2025.10.20.15.45.00.md
+++ b/changelog.d/2025.10.20.15.45.00.md
@@ -16,9 +16,9 @@ Successfully implemented continuous whole message indexing for the `@promethean/
 
 ### CLI Commands
 
-- `indexer start [--verbose]` - Start indexer with optional verbose logging
-- `indexer stop` - Stop the indexer service
-- `indexer status` - Check indexer service status
+- `indexer start [--pm2] [--verbose]` - Start indexer (foreground or PM2 daemon) with optional verbose logging
+- `indexer stop` - Stop PM2 daemon indexer service
+- `indexer status` - Check indexer service status (PM2-aware)
 
 ### Logging Improvements
 
@@ -29,10 +29,10 @@ Successfully implemented continuous whole message indexing for the `@promethean/
 ### Files Modified/Created
 
 - `src/services/indexer.ts` - Core indexer service with event handling and logging
-- `src/commands/indexer/start.ts` - CLI start command with verbose flag
-- `src/commands/indexer/stop.ts` - CLI stop command
-- `src/commands/indexer/status.ts` - CLI status command
-- `src/commands/indexer/index.ts` - Command group definition
+- `src/commands/indexer/start.ts` - CLI start command with PM2 daemon support
+- `src/commands/indexer/stop.ts` - CLI stop command (PM2-aware)
+- `src/commands/indexer/status.ts` - CLI status command (PM2-aware)
+- `src/commands/indexer/index.ts` - Command group definition with options
 
 ## Technical Implementation
 
@@ -67,17 +67,30 @@ Messages are stored as structured markdown with:
 ## Usage
 
 ```bash
-# Start indexer (quiet mode)
+# Start indexer (foreground)
 node dist/cli.js indexer start
 
-# Start indexer (verbose mode)
+# Start indexer (foreground, verbose)
 node dist/cli.js indexer start --verbose
 
-# Check status
+# Start indexer (PM2 daemon)
+node dist/cli.js indexer start --pm2
+
+# Start indexer (PM2 daemon, verbose)
+node dist/cli.js indexer start --pm2 --verbose
+
+# Check status (PM2-aware)
 node dist/cli.js indexer status
 
-# Stop indexer
+# Stop PM2 daemon
 node dist/cli.js indexer stop
 ```
+
+## PM2 Integration
+
+- **Status command** now checks PM2 processes and shows real-time metrics
+- **Start command** supports `--pm2` flag for daemon mode
+- **Stop command** properly stops PM2 daemon processes
+- **Graceful fallback** when PM2 is not installed
 
 The indexer now provides complete, continuous message indexing that captures every message as it's created and stores it for search and retrieval in the dual store system.
