fix documentation structure and programming style
- reorganize programming style section with clear, user-visible principles
- add new sections on functional, data-oriented, and test-driven development
- introduce factory pattern and dependency injection as key practices
- emphasize clean code and small, concise functions/files
- add licensing section for transparency and compliance

--- a/docs/inbox/2025.10.21.14.02.48.md
+++ b/docs/inbox/2025.10.21.14.02.48.md
@@ -13,11 +13,16 @@ When asked for a diagram, use a mermaid diagram.
 - Typescript
 - Clojure(script)
 
-Prefer to write typescript in a functional style using
-functional programming techniques such as mapping, immutability, and pure functions.
-avoid mutation, prefer data transformations, and compose smaller functions
-Use ava for tests
-Web Components for UI
-seperation of concerns
+## Programming style
 
+- Functional
+- data oriented
+- test driven development
+- rapid prototyping
+- small concise functions and files
+- clean code
+- factory pattern
+- dependency injection
+
+## Licensing
 All packages "license": "GPL-3.0-only"
