update frontend consolidation task status: breakdown
- task status updated from incoming to breakdown
- reflects current state of frontend project decomposition
- enables tracking of individual component ownership and progress

--- a/docs/agile/tasks/2025.10.14.frontend-consolidation.md
+++ b/docs/agile/tasks/2025.10.14.frontend-consolidation.md
@@ -1,6 +1,6 @@
 ---
 title: "Consolidate Frontend Projects into Unified Architecture"
-status: incoming
+status: breakdown
 priority: P0
 tags: [frontend, consolidation, architecture, migration, epic]
 uuid: "550e8400-e29b-41d4-a716-446655440000"
