add cross-platform configuration management system with schema valida...

--- a/docs/agile/tasks/2025.10.22.cross-platform-core-infrastructure.md
+++ b/docs/agile/tasks/2025.10.22.cross-platform-core-infrastructure.md
@@ -1,8 +1,8 @@
 ---
-uuid: 'a1b2c3d4-e5f6-7890-abcd-ef1234567890'
+uuid: 'cross-platform-core-infrastructure-2025-10-22'
 title: 'Implement Core Infrastructure and Runtime Detection'
-slug: '2025.10.22.cross-platform-core-infrastructure.md'
-status: 'backlog'
+slug: 'cross-platform-core-infrastructure'
+status: 'incoming'
 priority: 'P0'
 labels: ['architecture', 'implementation', 'cross-platform', 'foundation']
 created_at: '2025-10-22T15:20:00Z'
@@ -10,6 +10,7 @@ estimates:
   complexity: '3'
   scale: 'small'
   time_to_completion: '2 cloud sessions'
+storyPoints: '3'
 lastCommitSha: ''
 commitHistory: []
 ---
