--- a/docs/agile/tasks/2025.10.22.cross-platform-feature-detection.md
+++ b/docs/agile/tasks/2025.10.22.cross-platform-feature-detection.md
@@ -1,8 +1,8 @@
 ---
-uuid: 'c3d4e5f6-g7h8-9012-cdef-g345678901234'
+uuid: 'cross-platform-feature-detection-2025-10-22'
 title: 'Implement Feature Detection and Capability Registry'
-slug: '2025.10.22.cross-platform-feature-detection.md'
-status: 'backlog'
+slug: 'cross-platform-feature-detection'
+status: 'incoming'
 priority: 'P0'
 labels: ['architecture', 'implementation', 'cross-platform', 'feature-detection']
 created_at: '2025-10-22T15:30:00Z'
@@ -10,6 +10,7 @@ estimates:
   complexity: '3'
   scale: 'medium'
   time_to_completion: '2 cloud sessions'
+storyPoints: '3'
 lastCommitSha: ''
 commitHistory: []
 ---
