--- a/docs/agile/tasks/2025.10.22.cross-platform-platform-implementations.md
+++ b/docs/agile/tasks/2025.10.22.cross-platform-platform-implementations.md
@@ -1,15 +1,16 @@
 ---
-uuid: 'b2c3d4e5-f6g7-8901-bcde-f23456789012'
+uuid: 'cross-platform-platform-implementations-2025-10-22'
 title: 'Implement Platform-Specific Runtime Adapters'
-slug: '2025.10.22.cross-platform-platform-implementations.md'
-status: 'backlog'
+slug: 'cross-platform-platform-implementations'
+status: 'incoming'
 priority: 'P0'
-labels: ['architecture', 'implementation', 'cross-platform', 'runtime-adapters']
+labels: ['architecture', 'implementation', 'cross-platform', 'adapters']
 created_at: '2025-10-22T15:25:00Z'
 estimates:
   complexity: '4'
   scale: 'medium'
   time_to_completion: '3 cloud sessions'
+storyPoints: '4'
 lastCommitSha: ''
 commitHistory: []
 ---
