add cross-platform core infrastructure task and update indexer state

--- a/docs/agile/tasks/2025.10.22.cross-platform-core-infrastructure.md
+++ b/docs/agile/tasks/2025.10.22.cross-platform-core-infrastructure.md
@@ -2,7 +2,7 @@
 uuid: 'cross-platform-core-infrastructure-2025-10-22'
 title: 'Implement Core Infrastructure and Runtime Detection'
 slug: 'cross-platform-core-infrastructure'
-status: 'incoming'
+status: 'ready'
 priority: 'P0'
 labels: ['architecture', 'implementation', 'cross-platform', 'foundation']
 created_at: '2025-10-22T15:20:00Z'
@@ -11,8 +11,8 @@ estimates:
   scale: 'small'
   time_to_completion: '2 cloud sessions'
 storyPoints: '3'
-lastCommitSha: ''
-commitHistory: []
+lastCommitSha: '88b87a350'
+commitHistory: ['88b87a350']
 ---
 
 # Implement Core Infrastructure and Runtime Detection
