update cross-platform core infrastructure status to in_progress

--- a/docs/agile/tasks/2025.10.22.cross-platform-core-infrastructure.md
+++ b/docs/agile/tasks/2025.10.22.cross-platform-core-infrastructure.md
@@ -2,7 +2,7 @@
 uuid: 'cross-platform-core-infrastructure-2025-10-22'
 title: 'Implement Core Infrastructure and Runtime Detection'
 slug: 'cross-platform-core-infrastructure'
-status: 'ready'
+status: 'in_progress'
 priority: 'P0'
 labels: ['architecture', 'implementation', 'cross-platform', 'foundation']
 created_at: '2025-10-22T15:20:00Z'
