add requirements for contextstore and dualstoremanager to be thin wra...

--- a/docs/notes/2025.10.23.12.50.14.md
+++ b/docs/notes/2025.10.23.12.50.14.md
@@ -1,4 +1,6 @@
 @codex
 The `ContextStore` and `DualStoreManager` should continue to accept the same arguments as before.
-We want these classes to be a thin wrappers around a new functional, idempotent, pure (as possible) interfaces.
-We want these classes to emit depreciation warnings when used.
+## Requirements
+- both classes to be a thin wrappers around a new functional, idempotent, pure (as possible) interfaces.
+- both classes to emit depreciation warnings when used.
+
