--- a/docs/notes/2025.10.23.12.50.14.md
+++ b/docs/notes/2025.10.23.12.50.14.md
@@ -1,6 +1,15 @@
 @codex
 The `ContextStore` and `DualStoreManager` should continue to accept the same arguments as before.
+The original implementation is known to work.
 ## Requirements
 - both classes to be a thin wrappers around a new functional, idempotent, pure (as possible) interfaces.
 - both classes to emit depreciation warnings when used.
+- unit tests verifying the behaviors of the classes to
+- The callees have integration tests on paths that call either class
 
+## Tasks
+- [ ] restore the implementation of both `DualStoreManager` and `ContextStore` to the version currently on the `main` branch
+- [ ] Write comprehensive unit tests are written for both classes
+- [ ] Write integration tests for dependent packages around code pathways which depend on these classes.
+- [ ] Rewrite the classes be thin wrappers around pure idempotent functions
+- [ ] 
