add project agent role and kanban model with output contract and chec...
- Introduce project agent with clear role boundaries and output contract
- Define kanban model with valid transitions, WIP limits, and DoD requirements
- Specify programming stack, testing, and data-oriented principles
- Enforce package licensing (GPL-3.0-only) and test coverage standards
- Remove obsolete note file and update documentation artifacts
- Add structured output schema for all actions and decisions

--- a/docs/notes/2025.10.23.12.50.14.md
+++ b/docs/notes/2025.10.23.12.50.14.md
@@ -2,14 +2,30 @@
 The `ContextStore` and `DualStoreManager` should continue to accept the same arguments as before.
 The original implementation is known to work.
 ## Requirements
-- both classes to be a thin wrappers around a new functional, idempotent, pure (as possible) interfaces.
+
+- comprehensive unit tests exist for the original implementations of these classes
+- The callees have integration tests on paths that call either class
+- A pure idempotent functional interface that perform the same roles as the original classes exist
+- There are factory functions that implement the same interface as the original implementations
+- The files containing the original implementations export classes that wrap the functional implementation.
+- both classes to be a thin wrappers around
 - both classes to emit depreciation warnings when used.
 - unit tests verifying the behaviors of the classes to
-- The callees have integration tests on paths that call either class
 
 ## Tasks
 - [ ] restore the implementation of both `DualStoreManager` and `ContextStore` to the version currently on the `main` branch
 - [ ] Write comprehensive unit tests are written for both classes
 - [ ] Write integration tests for dependent packages around code pathways which depend on these classes.
-- [ ] Rewrite the classes be thin wrappers around pure idempotent functions
-- [ ] 
+- [ ] Rewrite the classes be thin wrappers around pure idempotent functions with the same type signatures.
+- [ ] write a factory function that creates an object that matches the type signature of both classes
+
+## Definition of done
+
+- [ ] 90% tests coverage on the original implementations is reached before any other work is done
+- [ ] Integration tests exist for dependent packages and pass.
+- [ ] There exists a pure functional interface meeting the following criteria:
+  - [ ] They execute the behaviors of each method of the original implementation
+  - [ ] The functions are curried
+  - [ ] The functions accept a state object as their first arguement
+  - [ ] the state object contains properties which match the original implementations
+- [ ] There is a class with the same name as the original classes which uses the functional actions
