fix: add pure functional actions interface and unit tests
- define a pure functional interface for actions in dual-store-manager and context-store
- include unit tests for the actions interface
- ensure implementation aligns with functional programming principles

--- a/docs/notes/2025.10.23.12.50.14.md
+++ b/docs/notes/2025.10.23.12.50.14.md
@@ -23,9 +23,11 @@ The original implementation is known to work.
 
 - [ ] 90% tests coverage on the original implementations is reached before any other work is done
 - [ ] Integration tests exist for dependent packages and pass.
-- [ ] There exists a pure functional interface meeting the following criteria:
+- [ ] There exists a pure functional interface of actions in a [[src/actions/{dual-store-manager, context-store}|packages/persistence]]
+      meeting the following criteria:
   - [ ] They execute the behaviors of each method of the original implementation
   - [ ] The functions are curried
   - [ ] The functions accept a state object as their first arguement
   - [ ] the state object contains properties which match the original implementations
 - [ ] There is a class with the same name as the original classes which uses the functional actions
+- [ ] Unit tests are written for the actions
