--- a/docs/notes/2025.10.23.12.50.14.md
+++ b/docs/notes/2025.10.23.12.50.14.md
@@ -1,8 +1,11 @@
 @codex
 The `ContextStore` and `DualStoreManager` should continue to accept the same arguments as before.
-The original implementation is known to work.
+The original implementation is known to work as we begin refactoring classes with mutable state
+across the project. This work will serve as an example of how to perform similar migrations in the future
+
 ## Requirements
 
+- The original implementations are restored
 - comprehensive unit tests exist for the original implementations of these classes
 - The callees have integration tests on paths that call either class
 - A pure idempotent functional interface that perform the same roles as the original classes exist
@@ -10,7 +13,7 @@ The original implementation is known to work.
 - The files containing the original implementations export classes that wrap the functional implementation.
 - both classes to be a thin wrappers around
 - both classes to emit depreciation warnings when used.
-- unit tests verifying the behaviors of the classes to
+- The new functional wrapper class passes the same tests as the original implementation
 
 ## Tasks
 - [ ] restore the implementation of both `DualStoreManager` and `ContextStore` to the version currently on the `main` branch
