--- a/docs/notes/2025.10.23.12.50.14.md
+++ b/docs/notes/2025.10.23.12.50.14.md
@@ -5,7 +5,7 @@ across the project. This work will serve as an example of how to perform similar
 
 ## Requirements
 
-- The original implementations are restored
+- The original implementations are restored from `main`
 - comprehensive unit tests exist for the original implementations of these classes
 - The callees have integration tests on paths that call either class
 - A pure idempotent functional interface that perform the same roles as the original classes exist
@@ -24,7 +24,7 @@ across the project. This work will serve as an example of how to perform similar
 
 ## Definition of done
 
-- [ ] 90% tests coverage on the original implementations is reached before any other work is done
+- [ ] 90% unit tests coverage on the original implementations is reached before any other work is done
 - [ ] Integration tests exist for dependent packages and pass.
 - [ ] There exists a pure functional interface of actions in a [[src/actions/{dual-store-manager, context-store}|packages/persistence]]
       meeting the following criteria:
