fix outdated note file with missing mutator entry
- remove stale entry from .#2025.10.23.12.50.14.md
- add placeholder for Stryker mutator in 2025.10.23.12.50.14.md

--- a/docs/notes/2025.10.23.12.50.14.md
+++ b/docs/notes/2025.10.23.12.50.14.md
@@ -25,6 +25,7 @@ across the project. This work will serve as an example of how to perform similar
 ## Definition of done
 
 - [ ] 90% unit tests coverage on the original implementations is reached before any other work is done
+- [ ] [Stryker Mutator bb]
 - [ ] Integration tests exist for dependent packages and pass.
 - [ ] There exists a pure functional interface of actions in a [[src/actions/{dual-store-manager, context-store}|packages/persistence]]
       meeting the following criteria:
